# dns-resolver-chatGPT

./: README.md
c/: Makefile  main.c
c++/: CMakeLists.txt  Makefile  MyClass.cpp  MyClass.h  cmake_install.cmake  main.cpp  test.dockerfile
go/: dns-resolver.go
java/: MyClass.java
python/: dns_resolver.py
rust/src/: main.rs
